# cmakExam

./: CMakeLists.txt  readme
include/static/: hello.h
src/: hello.cpp  main.cpp
